--- a/introduction.tex
+++ b/introduction.tex
@@ -4,7 +4,7 @@ To realize the vision of the Semantic Web, the conformance of existing data to t
 
 Besides mapping languages, there are automatic and semi-automatic RDFizers. We are not interested in automatic RDFizers (e.g. Direct Mapping~\cite{Direct_Mapping_W3C:12}, Docker2RDF~\cite{ayed2017docker2rdf}, etc.) as their transformation cannot be customized or they are restricted for specific domain models. The minor category of works (RMLEditor~\cite{heyvaert2016rmleditor}, OpenRefine~\cite{verborgh2013using}) around semi-automatic RDFizers is our main interest. We focus on this category due to their ability in aiding human experts by automating complex tasks without hindering flexibility by incorporating them for decision making and validation. The main problem with the latter tools is that they mostly only provide a graphical interface with some facilities for searching through ontologies. However, they depend much on human experts with respect to knowledge about ontologies and data modeling using them.
 
-In this work, our aim is to provide an approach to further facilitate semi-automatic RDFizers by automatically generating initial mappings that may then be customized by human experts. The originality of our contribution is that it automatically generates several holistic mappings and try best to provide an exhaustive description for a given type of instances. Our approach is not an alternative but complementary to existing tools. In the rest of this paper, we describe our approach and its implementation in \secref{approach} and \secref{implementation} respectively. Then, we demonstrate our implementation using real datasets from open data portal. Finally, we describe \secref{futureWork} that are we are currently working on.   
+In this work, our aim is to provide an approach to further facilitate semi-automatic RDFizers by automatically generating initial mappings that may then be customized by human experts. The originality of our contribution is that it automatically generates several holistic mappings and try best to provide an exhaustive description for a given type of instances. Our approach is not an alternative but complementary to existing tools. In the rest of this paper, we describe our approach and its implementation in \secref{approach} and \secref{implementation} respectively. Finally, we demonstrate our implementation using real datasets from open data portal. %Finally, we describe \secref{futureWork} that are we are currently working on.   
 
 
 
@@ -51,7 +51,7 @@ Similarly, the candidate data property generated for \kword{lon} is \kword{wgs84
 %\vspace{-0.5cm}
 \begin{table}[]
 	\centering
-	\scalebox{0.8}{
+	\scalebox{0.7}{
 		\begin{tabular}{|l|l|l|l|l|}
 			\hline
 			\multicolumn{3}{|c|}{\textbf{Schema Description}}                                                                         & \multicolumn{2}{c|}{\textbf{Generated Entities}}                                                 \\ \hline
@@ -75,7 +75,7 @@ Thirdly, possible combinations are generated. A combination consists of a candid
 %\vspace{-0.5cm}
 \begin{table}[]
 	\centering
-	\scalebox{0.8}{
+	\scalebox{0.7}{
 		\begin{tabular}{|l|l|l|l|l|l|l|l|}
 			\hline
 			& \textbf{Type Class} & \textbf{id}   & \textbf{LIBELLE} & \textbf{TOTAL} & \textbf{lat} & \textbf{lon} & \textbf{ADDRESSE} \\ \hline
