--- a/introduction.tex
+++ b/introduction.tex
@@ -122,12 +122,14 @@ The user interface is a web application implemented using the JavaScript library
 %For each possible mapping in the bottom right part, different pieces of information are provided namely: score, type class, number of classes/data properties and finally number of (un)mapped columns. Two main refinements are possible for each possible mapping. Firstly, data properties can be specified in class mappings. Secondly, ontology entities can be changed and paths can be re-generated for any schema element. This gives the user full flexibility to change and adapt a particular possible mapping.     
 
 
-\begin{figure}[h]
+\begin{comment}
+	\begin{figure}[h]
 	\centering
 	\includegraphics[scale=0.15]{images/global.png}
 	\caption{Screenshot of user interface}
 	\label{fig:screenshotInterface}
-\end{figure}
+	\end{figure}
+\end{comment}
 
 \section{Demonstration}\label{sec:demonstration}
 Our demonstration consist of using datasets from open data portals for some cities in France. \figref{expMappingParking} shows some of our experiments using these datasets. For each city, we performed two experiment. In \kword{NK}, no keywords are added by the user while in \kword{WK}, keywords are added. As we can see, even without keywords, there are fields that can be correctly mapped. Obviously, with keywords, initial mappings with better quality are generated. For all these datasets, we have their respective schema descriptions that we intend to use in our demonstration. 
