--- a/introduction.tex
+++ b/introduction.tex
@@ -2,7 +2,7 @@
 
 To realize the vision of the Semantic Web, the conformance of existing data to the RDF model is a necessary condition. Yet, it is a fact that most of the data available on the Web do not satisfy the latter requirement. A number of tools have been developed to facilitate the transition to RDF. Much of them are founded on well-defined mapping languages (R2RML~\cite{R2RML_W3C:12}, RML~\cite{dimou2014rml}, SPARQL-Generate~\cite{lefranccois2016flexible}, etc.). Using mapping languages directly is complex. This is because they have a steep learning curve and require knowing the syntax and semantics of the languages in addition to the Semantic Web stack and ontologies that can be used. 
 
-Besides mapping languages, there are automatic and semi-automatic RDFizers. We ignore automatic RDFizers (e.g. Direct Mapping~\cite{Direct_Mapping_W3C:12}, Docker2RDF~\cite{ayed2017docker2rdf}, etc.) as their transformation cannot be customized or they are restricted for specific domain models. The minor category of works (RMLEditor~\cite{heyvaert2016rmleditor}, OpenRefine~\cite{verborgh2013using}) around semi-automatic RDFizers is our main interest. We focus on this category due to their ability in aiding human experts by automating complex tasks without hindering flexibility by incorporating them for decision making and validation. The main problem with the latter tools is that they mostly only provide a graphical interface with some facilities for searching through ontologies. However, they depend much on human experts with respect to knowledge about ontologies and data modeling using them.
+Besides mapping languages, there are automatic and semi-automatic RDFizers. We ignore automatic RDFizers (e.g. Direct Mapping~\cite{Direct_Mapping_W3C:12}, Docker2RDF~\cite{ayed2017docker2rdf}, etc.) as their transformation cannot be customized or they are restricted for specific domain models. The minor category of works (RMLEditor~\cite{heyvaert2016rmleditor}, OpenRefine~\cite{verborgh2013using}, etc.) around semi-automatic RDFizers is our main interest. We focus on this category due to their ability in aiding human experts by automating complex tasks without hindering flexibility by incorporating them for decision making and validation. The main problem with the latter tools is that they mostly only provide a graphical interface with some facilities for searching through ontologies. However, they depend much on human experts with respect to knowledge about ontologies and data modeling using them.
 
 In this work, our aim is to provide an approach to further facilitate semi-automatic RDFizers by automatically generating initial mappings that may then be customized by human experts. The originality of our contribution is that it automatically generates several holistic mappings and try best to provide an exhaustive description for a given type of instances. Our approach is not an alternative but complementary to existing tools. In the rest of this paper, we describe our approach and its implementation in \secref{approach} and \secref{implementation} respectively. Finally, we demonstrate our implementation using real datasets from open data portal. %Finally, we describe \secref{futureWork} that are we are currently working on.   
 
@@ -30,7 +30,7 @@ Moreover, our approach uses an \kword{Ontology repository}. Suppose that it cont
 In our approach, to capture the background knowledge about the schema used in the raw data, firstly, we generate a \kword{Schema description} consisting of a \kword{Type description} and a \kword{Elements description}. \kword{Type Description} characterizes using keywords the type of objects described by the schema. \kword{Elements description} characterizes using keywords the schema elements (e.g. \kword{lon} in \figref{sampleRawData}).   
 
 
-Secondly, using an \kword{Ontology repository}, and the \kword{Type description} and the \kword{Elements description}, a set of candidate classes are generated for typing objects and a set of candidate data properties or classes are generated for modeling the schema element. 
+Secondly, using an \kword{Ontology repository}, and the \kword{Type description} and the \kword{Elements description}, a set of candidate classes are generated for typing objects and a set of candidate data properties or classes are generated for modeling the schema element. \nath{donner des détails : Existing simple matching approaches such as those presented in xx can be used at this step. et après mettre dans implem qq mots sur celles qu'on utilise nous}
 
 \tabref{overviewElementMappings} shows a schema description for the schema of \figref{sampleRawData} and generated ontology entities for its elements. For example, the objects' type in \figref{sampleRawData} can be described by the keyword `parking facility'. Using the latter description, the classes \kword{mv:ParkingFacility} and \kword{sc:Park} are generated to type the objects. Similarly, the schema element \kword{TOTAL} is described using the keywords `capacity' and `total' using which the class \kword{mv:Capacity} and data property \kword{sc:totalTime} are candidate classes generated to model it. The candidate proposal \kword{sc:totalTime} is not appropriate to model \kword{TOTAL} as its semantics is not compatible with the latter. To determine the appropriateness of an entity, we also generated a confidence. For simplicity sake, we omit this information from \tabref{overviewElementMappings}.
 
@@ -70,7 +70,7 @@ Similarly, the candidate data property generated for \kword{lon} is \kword{wgs84
 %\vspace{-1cm}
 
 
-Thirdly, possible combinations are generated. A combination consists of a candidate class for typing, that we refer as the \emph{type class}, and a candidate data property or class for each schema element if it was generated in the previous step. \tabref{overviewCombinationsElements} shows all combinations generated from the candidate entities in \tabref{overviewElementMappings}. As we can see, in each combination, there is one candidate entity for the type class and schema elements.
+Thirdly, possible combinations are generated\nath{using a cartesian product}. A combination consists of a candidate class for typing, that we refer as the \emph{type class}, and a candidate data property or class for each schema element if it was generated in the previous step. \tabref{overviewCombinationsElements} shows all combinations generated from the candidate entities in \tabref{overviewElementMappings}. As we can see, in each combination, there is one candidate entity for the type class and schema elements.
 
 %\vspace{-0.5cm}
 \begin{table}[]
@@ -89,7 +89,7 @@ Thirdly, possible combinations are generated. A combination consists of a candid
 \end{table}
 %\vspace{-1cm}
 
-Finally, we enrich each combination with the required ontology entities to instantiate them for every object in the raw data. For example, \figref{combinationNoPath} shows the first combination from \tabref{overviewCombinationsElements} and the required paths, illustrated as dotted lines, that will be generated at this step. It is possible that there may be more than one paths or no paths between some entities. A combination and the required paths makes up one initial mapping. To choose an initial mapping and further customize it by choosing and validating the paths, a user interface is provided.
+Finally, we enrich each combination with the required ontology entities to instantiate them for every object in the raw data.\nath{pas clair : we enrich each combination with the required ontology entities to describe  the Type Classe with the identified class or dataproperty mapped to an element description} For example, \figref{combinationNoPath} shows the first combination from \tabref{overviewCombinationsElements} and the required paths, illustrated as dotted lines, that will be generated at this step. It is possible that more than one paths or no paths exist between some entities. \nath{To identify such paths we ...}A combination and the required paths makes up one initial mapping. To choose an initial mapping and further customize it by choosing and validating the paths, a user interface is provided.
 
 %\figref{sampleOntologyRawData} is a possible result with some of the paths generated. 
 
