Updates from Overleaf

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,4 +1,4 @@
-Most data available on the Web do not conform to the RDF data model. A number of tools/approaches have been developed to encourage the transition to RDF. Manual and automatic tools/approaches tend to be complex and rigid. On the other hand, semi-automatic tools can hide and automate complex tasks while enhancing flexibility by solicitating human experts for decision making purposes. In this paper, we describe a semi-automatic approach to facilitate the transformation of heterogeneous semi-structured data to RDF. The originality of our approach is its ability to generate exhaustive descriptions using entities from several ontologies without requiring end-users to have a knowledge of ontologies. We provide an implementation of our approach and demonstrate its use using real datasets from open data portals.
+Most data available on the Web do not conform to the RDF data model. A number of tools/approaches have been developed to encourage the transition to RDF. Manual and automatic tools/approaches tend to be complex and rigid. On the other hand, semi-automatic tools can hide and automate complex tasks while enhancing flexibility by solicitating human experts for decision making purposes. In this paper, we describe a semi-automatic approach to facilitate the transformation of heterogeneous semi-structured data to RDF. The originality of our approach is its ability to generate exhaustive descriptions using entities from several ontologies without requiring end-users to have a knowledge of ontologies. We provide an implementation of our approach and demonstrate \coment{Pauline}{delete from here? We only do the expriment with oe dataset} its use using real datasets from open data portals.
 
 
 %The originality of our contribution is that it automatically generates several holistic mappings and try best to provide an exhaustive description for a given type of instances. We provide the foundation and motivation for such a contribution and describe the approach. Finally, we describe an implementation of the approach and validate it by performing several experiments on real datasets from city open data portals.
