--- a/references.bib
+++ b/references.bib
@@ -5908,3 +5908,13 @@ f
 	booktitle={Workshops at the Twenty-Sixth AAAI Conference on Artificial Intelligence},
 	year={2012}
 }
+
+@article{thieblin2019survey,
+  title={Survey on complex ontology matching},
+  author={Thi{\'e}blin, Elodie and Haemmerl{\'e}, Ollivier and Hernandez, Nathalie and Trojahn, Cassia},
+  journal={Semantic Web},
+  number={Preprint},
+  pages={1--39},
+  year={2019},
+  publisher={IOS Press}
+}
